<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProperty">

    <include
        android:id="@+id/toolbarAddProperty"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:id="@+id/inputAddress"
            android:hint="@string/property_address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:id="@+id/inputPrice"
            android:hint="@string/property_price"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:id="@+id/inputBillDate"
            android:hint="@string/bill_date"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/roomType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_type"
            android:textSize="24sp"
            android:layout_marginTop="6dp"/>

        <RadioGroup
            android:id="@+id/radio_group_room_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"/>

        <TextView
            android:id="@+id/furnished"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/furnished"
            android:textSize="24sp"
            android:layout_marginTop="6dp"/>

        <RadioGroup
            android:id="@+id/radio_group_furnished"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp" />

        <Button
            android:id="@+id/addPropertyBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_property"
            android:layout_margin="6dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>