...
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LandlordMain"
    android:background="@drawable/main">

    <Button
        android:id="@+id/landlordSettingsBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/setting" />
...
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:gravity="right|end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/landlordRefresh"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_margin="6dp"
            android:background="@drawable/refresh" />

...
