<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TenantMain">

    <Button
        android:id="@+id/tenantSettingsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="32dp"
        android:text="@string/settings" />

    <TextView
        android:id="@+id/tenantWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/welcome"
        android:textColor="#000000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tenantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/name"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/tenantRefreshBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_margin="6dp"
            android:background="@drawable/refresh" />

        <Button
            android:id="@+id/tenantAddRentBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_margin="6dp"
            android:background="@drawable/add" />
    </LinearLayout>

    <TextView
        android:id="@+id/tenantCurrentRentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_rent"
        android:textSize="24sp"
        android:layout_margin="6dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:id="@+id/tenantRentListLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

</LinearLayout>